# WagerBrain

./: .gitignore  README.md  pyproject.toml
WagerBrain/: __init__.py  brain.py  odds.py  payouts.py  probs.py  risk.py  utils.py  wagr.py
WagerBrain/strats/: arb.py  value.py
