[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "WagerBrain"
version = "2.0.0"
description = "A Python package for sports betting calculations, including odds conversion and arbitrage detection"
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
orgDev = [ 
    { name = "sedemmler", repo = "https://github.com/sedemmler/WagerBrain" }
]
contributor = [
    { name = "sxcntqnt", email = "your-email@example.com" }
]
keywords = ["sports-betting", "odds", "arbitrage", "gambling"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    # Add other dependencies here based on wagerbrain's requirements
]

[project.urls]
Homepage = "https://github.com/sxcntqnt/wagerbrain"
Repository = "https://github.com/sxcntqnt/wagerbrain.git"
Issues = "https://github.com/sxcntqnt/wagerbrain/issues"

[tool.hatch.metadata]
allow-direct-references = true
